# auto-invite-matrix-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config_example.yml
.github/workflows/: rust.yml
src/: config.rs  logger.rs  main.rs
