[package]
name = "auto-invite-matrix-bot"
version = "0.1.0"
authors = ["Marcel <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruma-client = "0.3.0"
futures-core = "0.3.4"
futures-util = "0.3.4"
tokio = { version = "0.2.11", features = ["macros"] }
url = "2.1.1"
clap = { git = "https://github.com/clap-rs/clap/" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.8"
fern = "0.5"
chrono = "0.4.10"
rand = "0.7.3"
failure = "0.1.6"

[patch.crates-io]
ruma-identifiers = { git = 'https://github.com/ruma/ruma-identifiers.git' }
ruma-events = { git = 'https://github.com/MTRNord/ruma-events.git', branch = "relates_to_backport" }
